<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.capstone.fitfriendapp.view.profile.EditProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/profile_picture" />

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/baseline_add_a_photo_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_profile_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:startIconDrawable="@drawable/baseline_account_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alissa_string"
                    android:hint="@string/hint_input_name"
                    tools:ignore="SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_profile_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alissa_gmail_com_string"
                    android:hint="@string/hint_input_email"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_profile_gender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:startIconDrawable="@drawable/female_ek1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_tv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female_string"
                    android:hint="@string/hint_input_gender"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_profile_weight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:startIconDrawable="@drawable/scale">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_tv_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_50_kg_string"
                    android:hint="@string/hint_input_weight"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_profile_height"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:startIconDrawable="@drawable/sewing_tape_measure"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_tv_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_input_height"
                    android:text="@string/_168_cm_string" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/bg_button_logout"
                    android:text="@string/cancel_button"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/bg_button_save"
                    android:text="@string/save_button"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>