<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.capstone.fitfriendapp.view.profile.ProfileActivity">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/desc_profile_picture"
        android:src="@drawable/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/alissa"
        android:layout_width="92.4dp"
        android:layout_height="43.4dp"
        android:text="@string/alissa_string"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/_navigation_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/desc_navigation_back"
        android:src="@drawable/_navigation_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/desc_edit_tools"
        android:src="@drawable/_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alissa"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alissa_gmail_com_string"
            android:editable="false"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_gender"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:startIconDrawable="@drawable/female_ek1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female_string"
            android:editable="false"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_weight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_gender"
        app:startIconDrawable="@drawable/scale">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50_kg_string"
            android:editable="false"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_height"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_weight"
        app:startIconDrawable="@drawable/sewing_tape_measure"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_168_cm_string"
            android:editable="false"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/bg_button_logout"
        android:text="@string/logout_string"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_height" />

</androidx.constraintlayout.widget.ConstraintLayout>
